# Founder

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/commands/: ci.md
.github/workflows/: ci.yml  codeql.yml
app/: config.py  database.py  main.py  users.py
app/routers/: auth_router.py  sources_router.py  stripe_router.py
data/: founder.db  users.csv
docs/: ci-guide.md  github-workflow.md  requirements.md  ui-review.md
static/: index.html
static/css/: style.css
static/js/: admin.js  chat.js  login.js
tests/: test_main.py
