[project]
name = "founder"
version = "0.1.0"
description = "Internal AI knowledge QA chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "openai==1.52.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "qdrant-client==1.12.0",
    "uvicorn==0.30.0",
]

[tool.uv]
package = false
