[project]
name = "founder"
version = "0.1.0"
description = "Internal AI knowledge QA chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "openai==1.52.0",
    "pyjwt>=2.13.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "qdrant-client==1.12.0",
    "stripe>=15.1.0",
    "uvicorn==0.30.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
